@@ -97,7 +97,7 @@ public:
   virtual double GetEnergyFraction (void) = 0;
 
   /**
-   * \param energy Amount of energy to decrease (in Joules)
+   * \param energyJ Amount of energy to decrease (in Joules)
    *
    * This function decreases the remaining energy in the energy source by the
    * specified amount. Provides linear interface for direct energy deduction.
@@ -105,7 +105,7 @@ public:
   virtual void DecreaseRemainingEnergy (double energyJ) = 0;
 
   /**
-   * \param energy Amount of energy to increase (in Joules)
+   * \param energyJ Amount of energy to increase (in Joules)
    *
    * This function increases the remaining energy in the energy source by the
    * specified amount. Provides linear interface for direct energy increase.
@@ -136,7 +136,6 @@ public:
 
   /**
    * \param deviceEnergyModelPtr Pointer to device energy model.
-   * \param tid TypeId of the specific device energy model.
    *
    * This function appends a device energy model to the end of a list of
    * DeviceEnergyModelInfo structs.
